# FLIMStudio

./: .gitignore  LICENSE  Pipfile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: about.md  index.md
docs/user-guide/: index.md  tutorials.md
experimental/: experimental1.py
flim_studio/: __init__.py  napari.yaml
flim_studio/common/core/: __init__.py
flim_studio/common/io/: __init__.py
flim_studio/core/: __init__.py  calibration.py  io.py  layer_manager.py  phasor_wrap.py  processing.py
flim_studio/core/io/: io.py
flim_studio/core/models/: dataset.py
flim_studio/core/widgets/: __init__.py  auto_spin_box.py  mpl_graph.py
flim_studio/plugins/: app_shell.py
flim_studio/plugins/phasor/core/: __init__.py  calibration.py  dataset.py  processing.py
flim_studio/plugins/phasor/ui/: __init__.py  calibration_widget.py  phasor_plot_control.py  phasor_plot_graph.py  phasor_plot_widget.py  sample_manager_widget.py  summary_widget.py
flim_studio/ui/: __init__.py  app_shell.py  docks.py  utils.py
flim_studio/ui/custom/: __init__.py  auto_spin_box.py  color_button.py  remove_button.py  themed_button.py
flim_studio/ui/menu/: auto_spin_box.py  calibration_widget.py  reference_widget.py
flim_studio/ui/phasor/: calibration_widget.py  phasor_plot_widget.py  sample_manager_widget.py
flim_studio/ui/phasor/plot/: __init__.py  control_panel.py  graph.py  phasor_plot_widget.py  roi_manager.py
flimari/: napari.yaml
flimari/config/: __init__.py  defaults.py
flimari/core/: utils.py
flimari/core/napari/: layer_manager.py
flimari/core/widgets/: indicator.py  mpl_graph.py
flimari/plugins/: app_shell.py  docks.py
flimari/plugins/phasor/core/: __init__.py  calibration.py  dataset.py
flimari/plugins/phasor/ui/: calibration_widget.py  phasor_plot_graph.py  phasor_plot_roi.py  phasor_plot_widget.py  sample_manager_widget.py  summary_widget.py  umap_widget.py
(+4 files in other folders)
